# libpatchfinder

./: .gitignore  CMakeLists.txt  build.sh  src
.github/workflows/: ci.yml  linux-bootstrap.sh  linux-build.sh  linux-post.sh  mac-bootstrap.sh  mac-build.sh  mac-post.sh
include/libpatchfinder/: machopatchfinder32.hpp  machopatchfinder64.hpp
include/libpatchfinder/ibootpatchfinder/: ibootpatchfinder.hpp  ibootpatchfinder32.hpp  ibootpatchfinder64.hpp
include/libpatchfinder/kernelpatchfinder/: kernelpatchfinder.hpp  kernelpatchfinder32.hpp  kernelpatchfinder64.hpp
libpatchfinder/: machopatchfinder64.cpp  patchfinder32.cpp  patchfinder64.cpp
libpatchfinder/ibootpatchfinder/: ibootpatchfinder64_base.cpp
libpatchfinder/kernelpatchfinder/: kernelpatchfinder.cpp  kernelpatchfinder64_base.cpp  kernelpatchfinder64_iOS15.hpp  kernelpatchfinder64_iOS16.cpp  kernelpatchfinder64_iOS16.hpp
pkgconfig/: libpatchfinder.pc  libpatchfinder.pc.in
src/: ibootpatchfinder64_base.cpp  ibootpatchfinder64_iOS14.cpp
tools/binrider/: main.cpp
tools/offsetexporter/: main.cpp  reflector_kernelpatchfinder.cpp
